<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    
	<RelativeLayout
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent">
	    
		<TextView
			android:id="@+id/user_label"
			android:text="@string/userNameLabel"
			android:layout_width="fill_parent"
		    android:layout_height="wrap_content" />
		
		<EditText 
		    android:id="@+id/user_field"
		    android:hint="@string/userNameEditText"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:layout_toRightOf="@id/user_label" />
		
		<TextView
			android:id="@+id/pass_label"
			android:text="@string/passwordLabel"
			android:layout_below="@id/user_label"
			android:layout_width="fill_parent"
		    android:layout_height="wrap_content" />
		
		<EditText
		    android:id="@+id/pass_field"
		    android:text="@string/passwordEditText"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:layout_toRightOf="@+id/pass_label" />
		
		<TextView
		    android:id="@+id/server_label"
		    android:text="@string/serverLabel"
		    android:layout_below="@id/pass_label"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content" />
		
		<EditText
			android:id="@+id/server_field"
		    android:layout_toRightOf="@id/server_label"
		    android:text="@string/serverEditText"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content" />
		    
		<Button android:id="@+id/login_button"
		    android:layout_height="wrap_content"
		    android:layout_width="wrap_content"
		    android:layout_alignParentBottom="true"
		    android:text="@string/loginButton" />
		    
	</RelativeLayout>
</RelativeLayout>
